Window manager: update screen layout.

--- a/Kinovea/UserInterface/FormWindowManager.resx
+++ b/Kinovea/UserInterface/FormWindowManager.resx
@@ -117,15 +117,103 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imgList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imgListStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="imgList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="imgListStatus.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
-        CwAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAY
+        EgAAAk1TRnQBSQFMAgEBCQEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAARICFQVDBhEyAAFt
+        A/gD6wZtAUMyAAFtAewBbQFHAeoBEgHsARMB7AEUAewBFAFtAUMyAAFtBNwH2wHVAUMyAAFtBdwG2wHV
+        ARUyAAFtBdwG2wHVARUyAAHrAwkB3AfbAdUBFTIAAfgDCQLcBtsB1QEUMgAB+AIJBNwE2wLVARQyAAH4
+        AQkG3ALbA9UBFDIAAesJ3AHbAtUBEzIAAfAB+APrBOwB6wNtAbw1AAH/ArUC/wKRAf83AAH/ArUB/wIA
+        Af8CkQH/NQAB/wK1Af8EAAH/ApEB/zMAAf8CtQH/BgAB/wHtAZEB/zUAAZIC6wH4AuwD+AHsAW0B/wYA
+        ARMDFAIVAkMBFQERBgAB6gMSAxMCFAEVFAAB6wH3AgcBkgLrA/gB6wHvBgAC6wFGARIB6wLqAW0BEgET
+        BgAC6wFuAW0B6wNtARIBExQAAesCvAEHAe0BbQHwAwcB8gH4BgABkQHcAbUBtAG6A7QB1QFsBgABkQG7
+        AbUGtAGLAQcFtAPPBa4BBwUAAesB8wESARQB7QH3AQcCZQEKAbQBkgYAAbUB4QPcBNsBiwYAAfcD3AXb
+        AYsBtAH/Ar0B/wIbAf8C8wH/AvMB/wGuAgAB9ALzAe0B/wHvAQcB7AHvAQcBpgGLAaYBtQHtAQAB9ALz
+        AfIB8wG1ARkBCQHcBdsBiwYAAfcBCQLcBdsBrgG0Af8C4wH/ApgB/wLwAf8C8AH/Aa4BAAGSAesB+AHs
+        AW0B8QMHAW0B7wGmAYsBpgG1Ae0BkgHrAfgB7AHtAfgB9wEZAQkB3AXbAYsB6gMSAhMBtQEZAQkB3AXb
+        Aa4BtA3/Aa4BAAHrAfcCBwHsAe8BDwESAe8B7QHzAbUBuwG1AfIB7AHrAfcCBwGSAesB7wEZA9wB2wLV
+        AdsBiwLrAW4BbQHrAW0B7wEJA9wE2wGuAbQB/wLbAf8C8AH/AnUB/wJ6Af8BzwEAAesCvAEHAZIBEgHs
+        ARQBEwHvAewC7QGSAe0BkgHrArwBBwHtAW0BtQHhBdwC2wGuAZEBuwG1A7QBtQXcA9sBrgG0Af8C2wH/
+        AvAB/wJ1Af8CegH/Ac8BAAHrAfMBEgEUAewB9AEUARMB8wT0AfMB7AFtAesB8wESARQB7QH3AfgB7AHr
+        AewC7QHsAusBbQH3A9wC2wGRAewBkQHtAfcBkgPsAZIBtA3/Ac8BAAHsAf8B7wHuAW0B7wK8Be8B7QHs
+        AfgB7AH/Ae8BBwHsAe8B7gGmAYsBkQG0AewBrgHsAQAB/wH3AQkC3ATbAbQBkQL0AewB8AEAAf8BtAH/
+        AvAB/wLbAf8CmAH/AvAB/wG0AQAB6wHxAgcBvAFtAZIBZQGGAWUBkQLsAeoB7ALrAfEDBwFtAe8BiwG7
+        AaYBtQEcAfABkQHsAQABtQEZAQkB3APbAbQBtQGuAgAB9AGRAfEBAAG0Af8C8AH/AtsB/wKYAf8C8AH/
+        AbQBAAHtAe8BDwESAe8B7QHzAbUBuwG1AfMB7QQAAe0B7wEPARIB7wGSAe4DtQHyAe0BAAG8AZEB9wHv
+        AQkD3AHbAbQBtQHVAa4DAAH0AZEB8gG0Df8BtAEAAfcBEgHsARQBEwHvAewC7QGSAu0EAAH3ARIB7AEU
+        ARMB7wHsAu0BkgLtBAABtQXcA9sBrgYAD7QBAAHsAfQBFAETAfME9AHzAewBbQQAAewB9AEUARMB8wT0
+        AfMB7AFtBAAB9wPtAfcBkgPsAZIGAAG1DQkBtAEAAQcB7wHwAbwF7wHtAewB+AQAAQcB7wHwAbwF7wHt
+        AewB+AQAAf8BAAHxAZIC9AHsAfABAAH/BgAB8QG7C7QBtQHxAgAB9AbzAewB6gHsAesFAAH0BvMB7AHq
+        AewB6wUAAfIBtQH0AgAB9AGRAfEeAAL0BwADSwoAA0sEAAH0Af8PAAL/DQABGgH/AQACmQEAAf8BGgQA
+        AUsBmgxLAZoBSwQAAfMBeQHzCQAB9AEHAfgLbQHyBQACdAF5AnQBeQJ0BAABSw6aAUsBBwS0AVIBWAFz
+        Bq4BBwEAAm0B7AHtAZIJ7QFtBAAB/wF0AZkBmgKgAZoBmQF0Af8DAAFLAZoBSwSuCa0BtAT/AfYBUgF5
+        AVIBGgT/Aa4BAAFtAfcB7wEHAe8BkgHtCG0B7QEAARoCdAF5BqABeQJ0ARoBAAFLAZoBSwHzAnQB8wGt
+        B9wBrQG0Af8EmgFYAnoBWAF5ARsC/wGuAQABbQHvAbwCBwH3AewBbQHwBvEBbQEAAf8BdAGZAqAEmgKg
+        AZkBdAH/AQABSwGaAUsBdAKaAXQBrQfcArQB/wR6ApoCegF5AVIBmgH2Aa4BAAFtAewB8QLrAe8BbQGS
+        AbwFZgHxAW0CAAF5AZoBoAaaAaABmgF5AgABSwGaAUsBdAKaAXQBrQbcAbQBvAG0Af8BwwFZApoBegGa
+        AVgCmgKZAfYBzwEAAW0B8wHwARMBQwHvAW0B7wG8A4sCZgHxAW0B9AGZAXQCoAaaAqABdAGZAfQBSwGa
+        AUsB8wJ0AfMGrQG0AbwB/wG0Av8BmgF6AZoBWQGaAVgBmgT/Ac8BAAFtAf8BvAEHAbwBBwHrAQcBvAWL
+        AfEBbQH0AZkBdAKgBpoCoAF0AZkB9AFLAZoBSw0AAbQC/wH2AVkBmgF6AZoCegEaAvQB/wHPAQABbQHv
+        AfEB8AHyAQcB7AHrAbwFiwHxAW0CAAF5AZoBoAaaAaABmgF5AgABSwGaAUsNAAG0A/8BmgF6A5oCegEa
+        AfQB/wG0AQABbQHwAZICDgHxAe8B7AG8BYsB8QFtAQAB/wF0AZkCoASaAqABmQF0Af8BAAFLAXoBSwUA
+        AbQCrQUAAbQD/wEbBHoBeQFYAXkB8QH/AbQBAAFtAfABDgHtAQcBDgG8AfgB9AbxAW0BAAEaAnQBeQag
+        AXkCdAEaAQABvAFRAbwFAAHxAbUB/wUAAbQN/wG0AQABbQHwAQ4B7wHqAQ4BvAHtBvgBbQG8AwAB/wF0
+        AZkBmgKgAZoBmQF0Af8LAAH/AbUB8QIAAbQCrQ+0AQABbQH/AZICDgHvCPECbQQAAnQBeQJ0AXkCdAwA
+        Aq0BtAIAAfEBtQH/AbUNCQG0AQABbQG8Af8H8wH0AfMB8QFtAesBbQQAARoB/wEAApkBAAH/ARoRAAH/
+        AbsC8QG7C7QBtQHxAgABvAttAewB9wFtBwAC9BQAAq0BtBoAAf8B7ARtAUIBTQE+BwABPgMAASgDAAFA
+        AwABMAMAAQEBAAEBBQABgAEBFgAD/wEAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYA
+        AYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAfABDwYAAeEBhwYAAsMGAAGHAeEGAAHw
+        AQAB/AEAAfwBAAL/AfABAAH8AQAB/AEAAv8B8AEAAfwBAAH8AgABAQHwAQAB/AEAAfwCAAEBAYABAAGA
+        AQAB/AIAAQEHAAEBBwABAQcAAQEHAAEBAwABAgEAAQIBAAEBAwABAQEAATEBAAEBAQABDwEAAQgBAAE4
+        AQABAQEAAQ8BAAEPAQABPwEAAQEBAAEPAQABDwEAAT8BAAEBAQABDwEAAQ8BQAG/AQABAQGAAQ8BgAEP
+        AYwBfwL/Af4BfwEfAfgB8wH/AfkB/wHyAU8CAAHxAf8BAAEBAfABDwMAAQEBAAEBAeABBwMAAQECAAGA
+        AQEDAAEBAgABgAEBAwABAQIAAcABAwMAAQEHAAEBBAABHwH/AQABAQIAAcABAwEfAf8BAAEBAgABgAEB
+        Ah8BAAEBAgABgAEBAh8BAAEBAgAB4AEHAf8BGAEAAQECAAHwAQ8B/wEYAQABAQIAAfIBTwH/AfgBAAEB
+        AYABAAH+AX8B/wH4A/8BwAs=
+</value>
+  </data>
+  <metadata name="imgListScreens.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>142, 17</value>
+  </metadata>
+  <data name="imgListScreens.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
+        DgAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,27 +241,41 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ADAAC9AcA
-        A0sKAANLBAAB9AH1HgABGgH/AQACmQEAAf8BGgQAAUsBmgxLAZoBSwQAAfMBeQHzDwABGgEAAvQKAAJ0
-        AXkCdAF5AnQEAAFLDpoBSwEHBLQBUgFYAXMGrgEHBAAB9QH/AQABMQEAAVIBGgEAAZkHAAH/AXQBmQGa
-        AqABmgGZAXQB/wMAAUsBmgFLBK4JrQG0BP8B9gFSAXkBUgEaBP8BrgUAATEB9gJYAXoBGgExAZkFAAEa
-        AnQBeQagAXkCdAEaAQABSwGaAUsB8wJ0AfMBrQfcAa0BtAH/BJoBWAJ6AVgBeQEbAv8BrgMAAZoBAAEa
-        AVgEegFSAf8CmQMAAf8BdAGZAqAEmgKgAZkBdAH/AQABSwGaAUsBdAKaAXQBrQfcArQB/wR6ApoCegF5
-        AVIBmgH2Aa4DAAEbATcBegGaBXoBWAExBQABeQGaAaAGmgGgAZoBeQIAAUsBmgFLAXQCmgF0Aa0G3AG0
-        AbwBtAH/AcMBWQKaAXoBmgFYApoCmQH2Ac8EAAEaBHoBWQJ6AVkCGwH2AQAB9AGZAXQCoAaaAqABdAGZ
-        AfQBSwGaAUsB8wJ0AfMGrQG0Ae4B/wG0Av8BmgF6AZoBWQGaAVgBmgP1Af8BzwIAAXoBOAF6AZoEegFZ
-        AnoBWQExAf8BAAH0AZkBdAKgBpoCoAF0AZkB9AFLAZoBSw0AAbQC/wH2AVkBmgF6AZoCegEaAvQB/wHP
-        BAABWQGaB3oBmgUAAXkBmgGgBpoBoAGaAXkCAAFLAZoBSw0AAbQD/wGaAXoDmgJ6ARoB9AH/AbQDAAI4
-        AXoBmgZ6ATcBMQH/AgAB/wF0AZkCoASaAqABmQF0Af8BAAFLAXoBSwUAAbQCrQUAAbQD/wEbBHoBeQFY
-        AXkB8QH/AbQCAAH/ARoBAAE4AZoFegE4BQABGgJ0AXkGoAF5AnQBGgEAAe4BUQHuBQAB8QG1Af8FAAG0
-        Df8BtAQAAVkBOAF6ApoBegKaAjgGAAH/AXQBmQGaAqABmgGZAXQB/wsAAf8BtQHxAgABtAKtD7QEAAF6
-        AQABOAJ6AZoCWQEAAfYB/wYAAnQBeQJ0AXkCdAwAAq0BtAIAAfEBtQH/AbUNCQG0BgABWQEAATgBGgEA
-        ATgJAAEaAf8BAAKZAQAB/wEaEQAB/wG7AvEBuwu0AbUB8QYAAf8BAAEbAf8OAAL0FAACrQG0IAABQgFN
-        AT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EAAf4BfwEfAfgB8wP/AfIBTwIAAfEB/wH9
-        AT8B8AEPAwABAQHlAS8B4AEHAwABAQHwAQ8BgAEBAwABAQHQAQMBgAEBAwABAQHAAQcBwAEDAwABAQHg
-        AQEFAAEBAYABAQIAAR8B/wEAAQEB4AEHAcABAwEfAf8BAAEBAcABAQGAAQECHwEAAQEBkAEPAYABAQIf
-        AQABAQHgAQcB4AEHAf8BGAEAAQEB6AETAfABDwH/ARgBAAEBAfoBXwHyAU8B/wH4AQABAQH6AX8B/gF/
-        Af8B+AT/Cw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xIAARICFQVDBhEyAAFt
+        A/gD6wZtAUMhAAEHBbQDzwWuAQcCAAFtAewBbQFHAeoBEgHsARMB7AEUAewBFAFtAUMhAAG0Af8CvQH/
+        AhsB/wLzAf8C8wH/Aa4CAAFtBNwH2wHVAUMhAAG0Af8C4wH/ApgB/wLwAf8C8AH/Aa4CAAFtBdwG2wHV
+        ARUhAAG0Df8BrgIAAW0F3AbbAdUBFSEAAbQB/wLbAf8C8AH/AnUB/wJ6Af8BzwIAAesDCQHcB9sB1QEV
+        IQABtAH/AtsB/wLwAf8CdQH/AnoB/wHPAgAB+AMJAtwG2wHVARQhAAG0Df8BzwIAAfgCCQTcBNsC1QEU
+        IQABtAH/AvAB/wLbAf8CmAH/AvAB/wG0AgAB+AEJBtwC2wPVARQhAAG0Af8C8AH/AtsB/wKYAf8C8AH/
+        AbQCAAHrCdwB2wLVARMhAAG0Df8BtAIAAfAB+APrBOwB6wNtAbwhAA+0BQAB/wK1Av8CkQH/JAABtQ0J
+        AbQEAAH/ArUB/wIAAf8CkQH/IwAB8QG7C7QBtQHxAwAB/wK1Af8EAAH/ApEB/zMAAf8CtQH/BgAB/wHt
+        AZEB/yYAAv8NAAGSAusB+ALsA/gB7AFtAf8GAAETAxQCFQJDARUBEQYAAeoDEgMTAhQBFQH0AQcB+Att
+        AfIFAAHrAfcCBwGSAusD+AHrAe8GAALrAUYBEgHrAuoBbQESARMGAALrAW4BbQHrA20BEgETAm0B7AHt
+        AZIJ7QFtBQAB6wK8AQcB7QFtAfADBwHyAfgGAAGRAdwBtQG0AboDtAHVAWwGAAGRAbsBtQa0AYsBbQH3
+        Ae8BBwHvAZIB7QhtAe0EAAHrAfMBEgEUAe0B9wEHAmUBCgG0AZIGAAG1AeED3ATbAYsGAAH3A9wF2wGL
+        AW0B7wG8AgcB9wHsAW0B8AbxAW0BAAH0AvMB7QH/Ae8BBwHsAe8BBwGmAYsBpgG1Ae0BAAH0AvMB8gHz
+        AbUBGQEJAdwF2wGLBgAB9wEJAtwF2wGuAW0B7AHxAusB7wFtAZIBvAVmAfEBbQGSAesB+AHsAW0B8QMH
+        AW0B7wGmAYsBpgG1Ae0BkgHrAfgB7AHtAfgB9wEZAQkB3AXbAYsB6gMSAhMBtQEZAQkB3AXbAa4BbQHz
+        AfABEwFDAe8BbQHvAbwDiwJmAfEBbQHrAfcCBwHsAe8BDwESAe8B7QHzAbUBuwG1AfIB7AHrAfcCBwGS
+        AesB7wEZA9wB2wLVAdsBiwLrAW4BbQHrAW0B7wEJA9wE2wGuAW0B/wG8AQcBvAEHAesBBwG8BYsB8QFt
+        AesCvAEHAZIBEgHsARQBEwHvAewC7QGSAe0BkgHrArwBBwHtAW0BtQHhBdwC2wGuAZEBuwG1A7QBtQXc
+        A9sBrgFtAe8B8QHwAfIBBwHsAesBvAWLAfEBbQHrAfMBEgEUAewB9AEUARMB8wT0AfMB7AFtAesB8wES
+        ARQB7QH3AfgB7AHrAewC7QHsAusBbQH3A9wC2wGRAewBkQHtAfcBkgPsAZIBbQHwAZICDgHxAe8B7AG8
+        BYsB8QFtAewB/wHvAe4BbQHvArwF7wHtAewB+AHsAf8B7wEHAewB7wHuAaYBiwGRAbQB7AGuAewBAAH/
+        AfcBCQLcBNsBtAGRAvQB7AHwAQAB/wFtAfABDgHtAQcBDgG8AfgB9AbxAW0B6wHxAgcBvAFtAZIBZQGG
+        AWUBkQLsAeoB7ALrAfEDBwFtAe8BiwG7AaYBtQEcAfABkQHsAQABtQEZAQkB3APbAbQBtQGuAgAB9AGR
+        AfEBAAFtAfABDgHvAeoBDgG8Ae0G+AFtAbwB7QHvAQ8BEgHvAe0B8wG1AbsBtQHzAe0EAAHtAe8BDwES
+        Ae8BkgHuA7UB8gHtAQABvAGRAfcB7wEJA9wB2wG0AbUB1QGuAwAB9AGRAfIBbQH/AZICDgHvCPECbQH3
+        ARIB7AEUARMB7wHsAu0BkgLtBAAB9wESAewBFAETAe8B7ALtAZIC7QQAAbUF3APbAa4GAAFtAbwB/wfz
+        AfQB8wHxAW0B6wFtAewB9AEUARMB8wT0AfMB7AFtBAAB7AH0ARQBEwHzBPQB8wHsAW0EAAH3A+0B9wGS
+        A+wBkgcAAbwLbQHsAfcBbQEHAe8B8AG8Be8B7QHsAfgEAAEHAe8B8AG8Be8B7QHsAfgEAAH/AQAB8QGS
+        AvQB7AHwAQAB/xAAAf8B7ARtAQAB9AbzAewB6gHsAesFAAH0BvMB7AHqAewB6wUAAfIBtQH0AgAB9AGR
+        AfEHAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAC/wGAAQEEAAL/AYABAQUA
+        AQEBgAEBBQABAQGAAQEFAAEBAYABAQUAAQEBgAEBBQABAQGAAQEFAAEBAYABAQUAAQEBgAEBBQABAQGA
+        AQEFAAEBAYABAQUAAQEBgAEBBQABAQHwAQ8FAAEBAeEBhwUAAQECwwQAAv8BhwHhBAAB+QH/AfABAAH8
+        AQAB/AIAAQEB8AEAAfwBAAH8AgABAQHwAQAB/AEAAfwDAAHwAQAB/AEAAfwDAAGAAQABgAEAAfwmAAEC
+        AQABAgUAAQEBAAExAwABDwEAAQgBAAE4AwABDwEAAQ8BAAE/AwABDwEAAQ8BAAE/AYACAAEPAQABDwFA
+        Ab8B/wHAAYABDwGAAQ8BjAF/Cw==
 </value>
   </data>
 </root>
