--- a/Kinovea/UserInterface/FormWindowManager.resx
+++ b/Kinovea/UserInterface/FormWindowManager.resx
@@ -117,4 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imgList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imgList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
+        CwAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ADAAC9AcA
+        A0sKAANLBAAB9AH1HgABGgH/AQACmQEAAf8BGgQAAUsBmgxLAZoBSwQAAfMBeQHzDwABGgEAAvQKAAJ0
+        AXkCdAF5AnQEAAFLDpoBSwEHBLQBUgFYAXMGrgEHBAAB9QH/AQABMQEAAVIBGgEAAZkHAAH/AXQBmQGa
+        AqABmgGZAXQB/wMAAUsBmgFLBK4JrQG0BP8B9gFSAXkBUgEaBP8BrgUAATEB9gJYAXoBGgExAZkFAAEa
+        AnQBeQagAXkCdAEaAQABSwGaAUsB8wJ0AfMBrQfcAa0BtAH/BJoBWAJ6AVgBeQEbAv8BrgMAAZoBAAEa
+        AVgEegFSAf8CmQMAAf8BdAGZAqAEmgKgAZkBdAH/AQABSwGaAUsBdAKaAXQBrQfcArQB/wR6ApoCegF5
+        AVIBmgH2Aa4DAAEbATcBegGaBXoBWAExBQABeQGaAaAGmgGgAZoBeQIAAUsBmgFLAXQCmgF0Aa0G3AG0
+        AbwBtAH/AcMBWQKaAXoBmgFYApoCmQH2Ac8EAAEaBHoBWQJ6AVkCGwH2AQAB9AGZAXQCoAaaAqABdAGZ
+        AfQBSwGaAUsB8wJ0AfMGrQG0Ae4B/wG0Av8BmgF6AZoBWQGaAVgBmgP1Af8BzwIAAXoBOAF6AZoEegFZ
+        AnoBWQExAf8BAAH0AZkBdAKgBpoCoAF0AZkB9AFLAZoBSw0AAbQC/wH2AVkBmgF6AZoCegEaAvQB/wHP
+        BAABWQGaB3oBmgUAAXkBmgGgBpoBoAGaAXkCAAFLAZoBSw0AAbQD/wGaAXoDmgJ6ARoB9AH/AbQDAAI4
+        AXoBmgZ6ATcBMQH/AgAB/wF0AZkCoASaAqABmQF0Af8BAAFLAXoBSwUAAbQCrQUAAbQD/wEbBHoBeQFY
+        AXkB8QH/AbQCAAH/ARoBAAE4AZoFegE4BQABGgJ0AXkGoAF5AnQBGgEAAe4BUQHuBQAB8QG1Af8FAAG0
+        Df8BtAQAAVkBOAF6ApoBegKaAjgGAAH/AXQBmQGaAqABmgGZAXQB/wsAAf8BtQHxAgABtAKtD7QEAAF6
+        AQABOAJ6AZoCWQEAAfYB/wYAAnQBeQJ0AXkCdAwAAq0BtAIAAfEBtQH/AbUNCQG0BgABWQEAATgBGgEA
+        ATgJAAEaAf8BAAKZAQAB/wEaEQAB/wG7AvEBuwu0AbUB8QYAAf8BAAEbAf8OAAL0FAACrQG0IAABQgFN
+        AT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EAAf4BfwEfAfgB8wP/AfIBTwIAAfEB/wH9
+        AT8B8AEPAwABAQHlAS8B4AEHAwABAQHwAQ8BgAEBAwABAQHQAQMBgAEBAwABAQHAAQcBwAEDAwABAQHg
+        AQEFAAEBAYABAQIAAR8B/wEAAQEB4AEHAcABAwEfAf8BAAEBAcABAQGAAQECHwEAAQEBkAEPAYABAQIf
+        AQABAQHgAQcB4AEHAf8BGAEAAQEB6AETAfABDwH/ARgBAAEBAfoBXwHyAU8B/wH4AQABAQH6AX8B/gF/
+        Af8B+AT/Cw==
+</value>
+  </data>
 </root>
