--- a/Kinovea/Properties/Resources.resx
+++ b/Kinovea/Properties/Resources.resx
@@ -169,6 +169,9 @@
   <data name="circled_play_button_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\circled-play-button-30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="circled_play_green2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\circled-play-green2-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="circled_play_green_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\circled-play-green-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
