--- a/Kinovea/UserInterface/FormWindowManager.resx
+++ b/Kinovea/UserInterface/FormWindowManager.resx
@@ -278,4 +278,7 @@
         Ab8B/wHAAYABDwGAAQ8BjAF/Cw==
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>275, 17</value>
+  </metadata>
 </root>
