--- a/Kinovea.ScreenManager/Properties/Capture.resx
+++ b/Kinovea.ScreenManager/Properties/Capture.resx
@@ -387,4 +387,7 @@
   <data name="stop2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stop2-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="command_line_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\command-line-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
