--- a/Kinovea/Properties/Resources.resx
+++ b/Kinovea/Properties/Resources.resx
@@ -202,6 +202,9 @@
   <data name="explorer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\explorer.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="explorer_video" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\explorer_video.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="eye_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eye-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
